hphp/test/zend/good/ext/standard/tests/general_functions/proc_open.php.skipif
<?php # vim:syn=php
<<__EntryPoint>> function main() { if (!is_executable("/bin/cat")) echo "skip";
if (!function_exists("proc_open")) echo "skip proc_open() is not available";
}
