hphp/test/zend/bad/ext/xml/tests/xml007.php.skipif
<?php // vim600: syn=php
include("skipif.inc");
if(strtoupper("дцья") != "ƒ÷№я")
{
	die("skip strtoupper on non-ascii not supported on this platform");
}
?>